# ACS_HW2

ACS_HW2/: ReadMe.txt
ACS_HW2/ACS_mdleypunskiy_HW2/: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rnd.h  shape.cpp  shape.h  tetrahedron.cpp  tetrahedron.h
ACS_HW2/ACS_mdleypunskiy_HW2/iofiles/: in.txt  out.txt  out2.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
